TS-4 Fixed broken styles on footer

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -1468,7 +1468,6 @@ main {
 }
 
 .animated-link .title span:before {
-    color: #004d35;
     top: 0;
     -webkit-transform: skewY(0);
     transform: skewY(0);
